# linkedlistcxx

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  linkedlistcxx.cpp  linkedlistcxx.h
include/: linkedlistcxx.h
source/: CMakeLists.txt  linkedlistcxx.cpp
test/: CMakeLists.txt  linkedlistcxx-tests.cpp  linkedlistcxxchar-tests.cpp  linkedlistcxxint-tests.cpp  main.cpp
